@@ -1,3 +1,7 @@
+* SVN *
+
+* provide an empty Dependencies::LoadingModule.load which prints deprecation warnings.  Lets 1.0 applications function with .13-style environment.rb.
+
 *1.3.0* (March 27th, 2005)
 
 * When possible, avoid incorrectly obtaining constants from parent modules. Fixes #4221. [Nicholas Seckar]
